--- a/features/aether/vegetation/bushes/spruce_bushes.yml
+++ b/features/aether/vegetation/bushes/spruce_bushes.yml
@@ -11,7 +11,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
