--- a/features/aether/vegetation/crops/wheat_patches.yml
+++ b/features/aether/vegetation/crops/wheat_patches.yml
@@ -13,7 +13,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
