--- a/features/aether/vegetation/trees/orchard_trees.yml
+++ b/features/aether/vegetation/trees/orchard_trees.yml
@@ -20,7 +20,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
