--- a/features/end/craggy_rocks.yml
+++ b/features/end/craggy_rocks.yml
@@ -20,7 +20,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
