--- a/features/end/tendrils/purple_tendrils_up.yml
+++ b/features/end/tendrils/purple_tendrils_up.yml
@@ -10,7 +10,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
