--- a/features/end/vegetation/trees/warped/twisting_beanstalks.yml
+++ b/features/end/vegetation/trees/warped/twisting_beanstalks.yml
@@ -19,7 +19,7 @@ distributor:
 locator:
   type: AND
   locators:
-    - type: TOP
+    - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
