Add feature customizable range values

--- a/features/aether/vegetation/bramble_vines.yml
+++ b/features/aether/vegetation/bramble_vines.yml
@@ -14,7 +14,7 @@ locator:
     # Match air underground
     - type: PATTERN
       range: &range
-        min: -50
+        min: $meta.yml:bottom-y
         max: $meta.yml:top-y
       pattern:
         type: MATCH_AIR
