--- a/features/aether/vegetation/ferns.yml
+++ b/features/aether/vegetation/ferns.yml
@@ -13,8 +13,8 @@ locator:
   locators:
     - type: SURFACE
       range: &range
-        min: 62
-        max: 225
+        min: $meta.yml:bottom-y
+        max: $meta.yml:top-y
     - type: PATTERN
       range: *range
       pattern:
