--- a/features/aether/vegetation/grass.yml
+++ b/features/aether/vegetation/grass.yml
@@ -13,7 +13,7 @@ locator:
   locators:
     - type: SURFACE
       range: &range
-        min: -64
+        min: $meta.yml:bottom-y
         max: $meta.yml:top-y
     - type: PATTERN
       range: *range
