--- a/features/end/vegetation/legged_lanterns.yml
+++ b/features/end/vegetation/legged_lanterns.yml
@@ -13,7 +13,7 @@ locator:
     - type: SURFACE
       range: &range
         min: $meta.yml:bottom-y
-        max: 235
+        max: $meta.yml:top-y
       amount: 1
     - type: PATTERN
       range: *range
