Adjust endship feature min

--- a/features/end/buildings/endships.yml
+++ b/features/end/buildings/endships.yml
@@ -12,7 +12,7 @@ locator:
   locators:
     - type: RANDOM
       height: &range
-        min: ${meta.yml:top-y} - 100
+        min: ${meta.yml:bottom-y} + 150
         max: ${meta.yml:top-y} - 30
       amount: 1
       salt: 3678
