--- a/features/aether/vegetation/trees/orchard_trees.yml
+++ b/features/aether/vegetation/trees/orchard_trees.yml
@@ -11,11 +11,10 @@ distributor:
         frequency: 0.05
         salt: 4345
       threshold: -0.4
-    - type: SAMPLER
-      sampler:
-        type: POSITIVE_WHITE_NOISE
-        salt: 4568
-      threshold: 0.7
+    - type: PADDED_GRID
+      width: 3
+      padding: 6
+      salt: 5468
 
 locator:
   type: AND
