--- a/biomes/end/dragon-island/main_end.yml
+++ b/biomes/end/dragon-island/main_end.yml
@@ -84,4 +84,4 @@ features:
   global-preprocessors: []
 
 palette:
-  - BLOCK:minecraft:end_stone: 319
+  - BLOCK:minecraft:end_stone: $meta.yml:top-y
