--- a/biomes/void/dragon-island-void/main_end_void.yml
+++ b/biomes/void/dragon-island-void/main_end_void.yml
@@ -48,7 +48,7 @@ terrain:
             frequency: 0.05 / ${meta.yml:terrain-configuration.island-scale}
 
 palette:
-  - BLOCK:minecraft:end_stone: 319
+  - BLOCK:minecraft:end_stone: $meta.yml:top-y
 
 features:
   preprocessors:
