--- a/biomes/void/void-sea/void_sea.yml
+++ b/biomes/void/void-sea/void_sea.yml
@@ -12,7 +12,7 @@ colors:
   water-fog: 0x000000
 
 palette:
-  - BLOCK:minecraft:end_stone: 319
+  - BLOCK:minecraft:end_stone: $meta.yml:top-y
 
 features:
   preprocessors:
