--- a/biomes/abstract/terrain/end/eq_overhangs.yml
+++ b/biomes/abstract/terrain/end/eq_overhangs.yml
@@ -20,8 +20,8 @@ terrain:
     variables:
       overhangStrength: 20
       threshold: ${meta.yml:terrain-configuration.island-threshold}
-      max: 210 #${meta.yml:terrain-configuration.island-max-height}
-      min: $meta.yml:bottom-y #${meta.yml:terrain-configuration.island-min-height}
+      max: ${meta.yml:terrain-configuration.island-max-height}
+      min: ${meta.yml:terrain-configuration.island-min-height}
       taper: ${meta.yml:terrain-configuration.island-taper}
       flatness: ${meta.yml:terrain-configuration.island-flatness}
       undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
