--- a/biomes/abstract/terrain/end/eq_spikes.yml
+++ b/biomes/abstract/terrain/end/eq_spikes.yml
@@ -12,8 +12,8 @@ vars: &variables
   # - Platform      - Slab of terrain surrounding the large & little spikes
   # - Baby spikes   - Tiny spikes as a part of the ground terrain
   
-  base: 64 # Base y level
-  groundHeight: 50 # Block height of ground terrain
+  base: ${meta.yml:top-y}/2 # Base y level
+  groundHeight: ${meta.yml:top-y}/3 # Block height of ground terrain
   babySpikeHeight: 0.2 # Block height of small ground spikes
   
   spikeSlantStrength: 1
@@ -32,8 +32,8 @@ vars: &variables
   platformMaskFull: 0.1
   
   threshold: ${meta.yml:terrain-configuration.island-threshold}
-  max: 250 #${meta.yml:terrain-configuration.island-max-height}
-  min: -70 #${meta.yml:terrain-configuration.island-min-height}
+  max: ${meta.yml:terrain-configuration.island-max-height}
+  min: ${meta.yml:terrain-configuration.island-min-height}
   taper: ${meta.yml:terrain-configuration.island-taper}
   flatness: ${meta.yml:terrain-configuration.island-flatness}
   undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
