--- a/biomes/end/argil_growth.yml
+++ b/biomes/end/argil_growth.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:ARGIL_GROWTH
 
 palette:
-  - BLACK_GRAY_TERRACOTTA: 319
+  - BLACK_GRAY_TERRACOTTA: $meta.yml:top-y
 
 features:
   preprocessors:
