--- a/biomes/end/corrupted_wastes.yml
+++ b/biomes/end/corrupted_wastes.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:CORRUPTED_WASTES
 
 palette:
-  - OBBY_PURPLE_MIX: 319
+  - OBBY_PURPLE_MIX: $meta.yml:top-y
 
 features:
   trees:
