--- a/biomes/end/crying_currents.yml
+++ b/biomes/end/crying_currents.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:CRYING_CURRENTS
 
 palette:
-  - CRYING_CURRENTS: 319
+  - CRYING_CURRENTS: $meta.yml:top-y
 
 features:
   trees:
