--- a/biomes/end/dark_end.yml
+++ b/biomes/end/dark_end.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:DARK_END
 
 palette:
-  - DARK_END: 319
+  - DARK_END: $meta.yml:top-y
 
 features:
   trees:
