--- a/biomes/end/generic/end_highlands.yml
+++ b/biomes/end/generic/end_highlands.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:END_HIGHLANDS
 
 palette:
-  - BLOCK:minecraft:end_stone: 319
+  - BLOCK:minecraft:end_stone: $meta.yml:top-y
 
 features:
   trees:
