--- a/biomes/end/shattered/shattered_forest.yml
+++ b/biomes/end/shattered/shattered_forest.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:SHATTERED_FOREST
 
 palette:
-  - SHATTERED_GROUND: 319
+  - SHATTERED_GROUND: $meta.yml:top-y
 
 features:
   trees:
