--- a/biomes/end/skewered_cliffs.yml
+++ b/biomes/end/skewered_cliffs.yml
@@ -5,7 +5,7 @@ vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:SKEWERED_CLIFFS
 
 palette:
-  - SHATTERED_GROUND: 319
+  - SHATTERED_GROUND: $meta.yml:top-y
 
 features:
   trees:
