--- a/biomes/end/end_highlands.yml
+++ b/biomes/end/end_highlands.yml
@@ -1,6 +1,8 @@
 id: END_HIGHLANDS
 type: BIOME
-extends: [ BASE_END, EQ_DEFAULT ]
+extends:
+  - BASE_END
+  - EQ_DEFAULT
 vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:END_HIGHLANDS
 
