--- a/math/samplers/spots.yml
+++ b/math/samplers/spots.yml
@@ -1,4 +1,6 @@
 variables: &variables
+  aetherPocketToggle: $customization.yml:aether-pocket-toggle
+
   spawnRadiusOffset: $customization.yml:spot-spawn-radius-offset
 
   spread: $customization.yml:spot-spread
