--- a/biomes/abstract/terrain/void/eq_void.yml
+++ b/biomes/abstract/terrain/void/eq_void.yml
@@ -18,12 +18,12 @@ terrain:
         )
       )
     variables:
-      threshold: 0.4
-      max: 250
-      min: -40
-      taper: 100
-      flatness: 5
-      undercarriageTranslate: -10
+      threshold: 1
+      max: ${meta.yml:terrain-configuration.island-max-height}
+      min: ${meta.yml:terrain-configuration.island-min-height}
+      taper: ${meta.yml:terrain-configuration.island-taper}
+      flatness: ${meta.yml:terrain-configuration.island-flatness}
+      undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
     samplers:
       simplex3:
         dimensions: 3
@@ -33,7 +33,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.1 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.02 / ${meta.yml:terrain-configuration.island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
