--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -42,6 +42,7 @@ APRICHORUS_PLAINS: 0x2c2e8e
 ASHEN_END: 0x262c2b
 
 # void biomes
+DRAGON_PIT: 0x050505
 MAIN_END_VOID: 0x141414
 VOID: 0x171717
 STARFIELD: 0xff33cc
