--- a/biomes/end/crying_currents.yml
+++ b/biomes/end/crying_currents.yml
@@ -1,6 +1,8 @@
 id: CRYING_CURRENTS
 type: BIOME
-extends: [ BASE_END, EQ_DEFAULT ]
+extends:
+  - BASE_END
+  - EQ_DEFAULT
 vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:CRYING_CURRENTS
 
@@ -8,11 +10,8 @@ palette:
   - CRYING_CURRENTS: $meta.yml:top-y
 
 features:
-  trees:
-    - BURBLE_TREES
-    - PURPLE_TENDRILS_UP
-    - PURPLE_TENDRILS_DOWN
-    - PURPLE_TENDRILS_SIDE
+  preprocessors:
+    - SMALL_CRYING_TENDRILS
+    - CRYING_TENDRILS
   postprocessors:
-    - CRYING_DRIPS
     - CRYING_CURRENTS_GLOWS
