--- a/features/end/tendrils/crying_tendrils.yml
+++ b/features/end/tendrils/crying_tendrils.yml
@@ -1,12 +1,12 @@
-id: CRYING_CURRENTS_GLOWS
+id: CRYING_TENDRILS
 type: FEATURE
 
 distributor:
   type: SAMPLER
   sampler:
     type: POSITIVE_WHITE_NOISE
-    salt: 6012
-  threshold: 0.5/8
+    salt: 6458
+  threshold: 0.003
 
 locator:
   type: AND
@@ -25,23 +25,15 @@ locator:
           pattern:
             type: MATCH
             block: minecraft:purple_concrete
-            offset: 1
+            offset: -1
         - type: PATTERN
           range: *range
           pattern:
             type: MATCH
             block: minecraft:purple_concrete
-            offset: -1
-        - type: ADJACENT_PATTERN
-          range: *range
-          pattern:
-            type: MATCH
-            block: minecraft:purple_concrete
-            offset: 0
-    
-      
+            offset: 1
 
 structures:
   distribution:
     type: CONSTANT
-  structures: BLOCK:minecraft:light[level=15]
+  structures: crying_tendril
