--- a/biome-distribution/stages/outer_end_distribution.yml
+++ b/biome-distribution/stages/outer_end_distribution.yml
@@ -23,7 +23,7 @@ stages:
       - SHATTERED_FOREST: 1
     to:
       ring2:
-        - CRYING_CURRENTS: 1
+        - TAINTED_END: 1
         - DARK_END: 1
         - AMETHYST_END: 1
         - CHORAL_DEADLANDS: 1
