--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -12,7 +12,7 @@ SHATTERED_FOREST: 0x2f1645
 SKEWERED_CLIFFS: 0xfafae3
 DARK_END: 0x1f1f14
 AMETHYST_END: 0x9966cc
-CRYING_CURRENTS: 0x7d08c8
+TAINTED_END: 0x7d08c8
 CORRUPTED_WASTES: 0x100917
 
 STYGIAN_BARRENS: 0x252130
