--- a/features/end/misc/tainted_glows.yml
+++ b/features/end/misc/tainted_glows.yml
@@ -1,12 +1,12 @@
-id: CRYING_TENDRILS
+id: TAINTED_GLOWS
 type: FEATURE
 
 distributor:
   type: SAMPLER
   sampler:
     type: POSITIVE_WHITE_NOISE
-    salt: 6458
-  threshold: 0.003
+    salt: 5364
+  threshold: 0.05
 
 locator:
   type: AND
@@ -24,16 +24,24 @@ locator:
           range: *range
           pattern:
             type: MATCH
-            block: minecraft:purple_concrete
-            offset: -1
+            block: minecraft:purple_concrete_powder
+            offset: 1
         - type: PATTERN
           range: *range
           pattern:
             type: MATCH
-            block: minecraft:purple_concrete
-            offset: 1
+            block: minecraft:purple_concrete_powder
+            offset: -1
+        - type: ADJACENT_PATTERN
+          range: *range
+          pattern:
+            type: MATCH
+            block: minecraft:purple_concrete_powder
+            offset: 0
+    
+      
 
 structures:
   distribution:
     type: CONSTANT
-  structures: crying_tendril
+  structures: BLOCK:minecraft:light[level=15]
