--- a/biomes/end/choral_deadlands.yml
+++ b/biomes/end/choral_deadlands.yml
@@ -1,6 +1,8 @@
 id: CHORAL_DEADLANDS
 type: BIOME
-extends: [ BASE_END, EQ_OVERHANGS ]
+extends:
+  - BASE_END
+  - EQ_DEFAULT
 vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:CHORAL_DEADLANDS
 
