--- a/biomes/end/ivory_empyrean.yml
+++ b/biomes/end/ivory_empyrean.yml
@@ -1,6 +1,8 @@
 id: IVORY_EMPYREAN
 type: BIOME
-extends: [ BASE_END, EQ_DEFAULT ]
+extends:
+  - BASE_END
+  - EQ_DEFAULT
 vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:IVORY_EMPYREAN
 
@@ -14,6 +16,7 @@ palette:
 features:
   flora:
     - END_GRASS
-    - PEARLESCENT_BUSHES
   trees:
     - IVORY_TREES
+    - STRIPPED_PALE_OAK_BUSHES
+    - FALLEN_IVORY_TREES
