--- a/features/end/vegetation/trees/ivory/fallen_ivory_trees.yml
+++ b/features/end/vegetation/trees/ivory/fallen_ivory_trees.yml
@@ -1,12 +1,11 @@
-id: END_GRASS
+id: FALLEN_IVORY_TREES
 type: FEATURE
 
 distributor:
-  type: SAMPLER
-  sampler:
-    type: POSITIVE_WHITE_NOISE
-    salt: 7544
-  threshold: 0.125
+  type: PADDED_GRID
+  width: 53
+  padding: 44
+  salt: 6512
 
 locator:
   type: AND
@@ -32,5 +31,5 @@ structures:
   distribution:
     type: WHITE_NOISE
   structures:
-    - BLOCK:minecraft:short_grass: 6
-    - tall_grass: 1
+    - fallen_ivory_tree_procedural: 1
+    - blank: 2
