--- a/palettes/end/powder/white_powder_end.yml
+++ b/palettes/end/powder/white_powder_end.yml
@@ -3,14 +3,19 @@ type: PALETTE
 
 layers:
   - materials:
-      - minecraft:white_concrete: 3
-      - minecraft:end_stone: 1
+      - minecraft:white_concrete: 1
       - minecraft:white_concrete_powder: 2
     layers: 1
-    sampler: &transitionSampler
-      type: WHITE_NOISE
-      salt: 4357
-    threshold: 0.5
+  - materials:
+      - minecraft:white_concrete: 1
+      - minecraft:white_concrete_powder: 2
+      - minecraft:end_stone: 1
+    layers: 1
   - materials:
       - minecraft:end_stone: 1
     layers: 1
+
+sampler:
+  type: WHITE_NOISE
+  salt: 4357
+threshold: 0.5
