Improve crim_desolate

--- a/biomes/end/crim_desolate.yml
+++ b/biomes/end/crim_desolate.yml
@@ -1,6 +1,8 @@
 id: CRIM_DESOLATE
 type: BIOME
-extends: [ BASE_END, EQ_DEFAULT ]
+extends:
+  - BASE_END
+  - EQ_DEFAULT
 vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:CRIM_DESOLATE
 
