--- a/palettes/end/powder/light_gray_powder_end.yml
+++ b/palettes/end/powder/light_gray_powder_end.yml
@@ -4,20 +4,25 @@ type: PALETTE
 layers:
   - materials:
       - minecraft:light_gray_concrete_powder: 3
-      - minecraft:light_gray_concrete: 2
-      - minecraft:end_stone: 5
+      - minecraft:end_stone: 2
     layers: 1
+  - materials:
+      - minecraft:light_gray_concrete_powder: 3
+      - minecraft:end_stone: 2
+    layers: 1
+  - materials:
+      - minecraft:end_stone: 1
+    layers: 1
+
 sampler:
-  type: WHITE_NOISE
-  amplitude: 1
+  type: DOMAIN_WARP
+  amplitude: 2
   warp:
-    type: "OPEN_SIMPLEX_2"
-    frequency: 0.9
+    type: GAUSSIAN
   sampler:
     type: FBM
     octaves: 2
     sampler:
-      type: "CELLULAR"
-      return: "CellValue"
-      frequency: 0.5
-      salt: 9345
+      type: OPEN_SIMPLEX_2
+      frequency: 0.007
+      salt: 6881
