--- a/features/end/vegetation/bushes/stripped_pale_oak_bushes.yml
+++ b/features/end/vegetation/bushes/stripped_pale_oak_bushes.yml
@@ -23,8 +23,10 @@ locator:
     - type: PATTERN
       range: *range
       pattern:
-        type: MATCH
-        block: minecraft:air
+        type: MATCH_SET
+        blocks:
+          - minecraft:snow
+          - minecraft:air
         offset: 0
     - type: PATTERN
       range: *range
