Adjust vermilion vegetation

--- a/features/end/vegetation/bushes/stripped_mangrove_bushes.yml
+++ b/features/end/vegetation/bushes/stripped_mangrove_bushes.yml
@@ -17,19 +17,6 @@ locator:
     - type: PATTERN
       range: *range
       pattern:
-        type: OR
-        patterns:
-          - type: MATCH_SET
-            blocks: $features/meta.yml:end-plantable-blocks
-            offset: -1
-          - type: MATCH_SET
-            blocks:
-              - minecraft:sand
-              - minecraft:red_sand
-            offset: -1
-    - type: PATTERN
-      range: *range
-      pattern:
         type: MATCH_SET
         blocks:
           - minecraft:snow
@@ -38,9 +25,15 @@ locator:
     - type: PATTERN
       range: *range
       pattern:
+        type: MATCH_SET
+        blocks: $features/meta.yml:end-plantable-blocks
+        offset: -1
+    - type: PATTERN
+      range: *range
+      pattern:
         type: MATCH
         block: minecraft:end_stone
-        offset: -2
+        offset: -3
 
 structures:
   distribution:
