Rename stygian barrens terrain to eq_narrow

--- a/biomes/end/stygian_barrens.yml
+++ b/biomes/end/stygian_barrens.yml
@@ -2,7 +2,7 @@ id: STYGIAN_BARRENS
 type: BIOME
 extends:
   - BASE_END
-  - EQ_TEST
+  - EQ_NARROW
 vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:STYGIAN_BARRENS
 
