--- a/biomes/end/rosette_pools.yml
+++ b/biomes/end/rosette_pools.yml
@@ -2,7 +2,7 @@ id: ROSETTE_POOLS
 type: BIOME
 extends:
   - BASE_END
-  - EQ_TEST
+  - EQ_OVERHANGS
 vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:ROSETTE_POOLS
 
