--- a/features/end/vegetation/bushes/stripped_acacia_bushes.yml
+++ b/features/end/vegetation/bushes/stripped_acacia_bushes.yml
@@ -17,16 +17,9 @@ locator:
     - type: PATTERN
       range: *range
       pattern:
-        type: OR
-        patterns:
-          - type: MATCH_SET
-            blocks: $features/meta.yml:end-plantable-blocks
-            offset: -1
-          - type: MATCH_SET
-            blocks:
-              - minecraft:sand
-              - minecraft:red_sand
-            offset: -1
+          type: MATCH_SET
+          blocks: $features/meta.yml:end-plantable-blocks
+          offset: -1
     - type: PATTERN
       range: *range
       pattern:
@@ -40,7 +33,7 @@ locator:
       pattern:
         type: MATCH
         block: minecraft:end_stone
-        offset: -2
+        offset: -3
 
 structures:
   distribution:
