--- a/biomes/end/choruve_woods.yml
+++ b/biomes/end/choruve_woods.yml
@@ -8,6 +8,7 @@ color: $biomes/colors.yml:CHORUVE_WOODS
 
 colors:
   grass: 0x584a6c
+  foliage: 0x584a6c
 
 palette:
   - BLUE_TERRACOTTA: $meta.yml:top-y
@@ -18,3 +19,4 @@ features:
   trees:
     - CHORUVE_TREES
     - FALLEN_CHORUVE_TREES
+    - CHERRY_WOOD_BUSHES
