--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -27,7 +27,7 @@ MAUVE_JUNGLE: 0xa92feb
 WARPED_BARRENS: 0x00d0cb
 WARPED_WOODLANDS: 0x00bdb8
 TWISTED_GROVE: 0x00aba6
-FLAXEN_FOREST: 0xFFFF00
+END_WILDS: 0xFFFF00
 
 ARGIL_GROWTH: 0x382923
 
