--- a/biome-distribution/stages/outer_end_distribution.yml
+++ b/biome-distribution/stages/outer_end_distribution.yml
@@ -30,7 +30,7 @@ stages:
       ring3:
         - IVORY_EMPYREAN: 1
         - VERMILION_WILDS: 1
-        - CRIM_DESOLATE: 1
+        - CRIM_THICKET: 1
         - STYGIAN_BARRENS: 1
       ring4:
         - MAUVE_JUNGLE: 1
