--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -34,7 +34,7 @@ ARGIL_GROWTH: 0x382923
 END_NOODLES: 0xf5f5c1
 END_WEBS: 0xe8e895
 
-CRIM_DESOLATE: 0x9a596c
+CRIM_THICKET: 0x9a596c
 VERMILION_WILDS: 0xb33c35
 CERISE_CORRAL: 0xc059b7
 CERULEAN_EXPANSE: 0x2c2e8e
